# nesquick

./: .gitignore  CMakeLists.txt  IDEA.md  README.md  break_test.py  emu6502.py  inesparser.py  lstdebug.py  main.py  nes.py  palette.py  ppu.py  rom.py  snake.py
audio/: audio_pyaudio.py  audio_sounddevice.py  sweep_pa.py  sweep_sd.py
py/: emu6502.py  inesparser.py  lstdebug.py  ppu.py
src/: CMakeLists.txt  apu.cpp  apu.hpp  audio.cpp  audio.hpp  cpu.cpp  cpu.hpp  cpumem.cpp  cpumem.hpp  device.hpp  lstdebugger.cpp  lstdebugger.hpp  main.cpp  ppu.cpp  ppu.hpp  utils.cpp  utils.hpp
